<package format="2">
  <name>drive_controller</name>
  <version>1.0.0</version>
  <description>The driver for motors controller of mobile robot</description>
  <author>Michał Drwięga</author>
  <maintainer email="drwiega.michal@gmail.com">Michał Drwięga</maintainer>
  <license>BSD</license>
  <url type="website">http://www.mdrwiega.com</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
</package>
