<package format="2">
  <name>md_drive_ros</name>
  <version>1.0.0</version>
  <description>The ROS node for MD Drive device</description>
  <author>Michal Drwiega</author>
  <maintainer email="drwiega.michal@gmail.com">Micha Drwiega</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://www.mdrwiega.com</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
</package>
