<package format="3">
  <name>md_drive_ros</name>
  <version>1.1.0</version>
  <description>The ROS node for MD Drive device</description>
  <author>Michal Drwiega</author>
  <maintainer email="drwiega.michal@gmail.com">Michal Drwiega</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://www.mdrwiega.com</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
